--- a/teste_chatbot.ipynb
+++ b/teste_chatbot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -23,35 +23,7 @@
      "output_type": "stream",
      "text": [
       "Olá, Eu sou Chatty e eu falo bastante ;)\n",
-      "Por favor escreva em minusculo. Escreva quit para sair \n",
-      ">olá\n",
-      "Eaewww, blz?\n",
-      ">tudo bem?\n",
-      "Estou bem\n",
-      "E você?\n",
-      ">bem também\n",
-      "None\n",
-      ">bem\n",
-      "None\n",
-      ">boa noite\n",
-      "None\n",
-      ">qual sua idade?\n",
-      "Eu sou um programa de computador rsrs\n",
-      "Sério você está me perguntando isso?\n",
-      ">sim\n",
-      "None\n",
-      ">quem criou vocÊ?\n",
-      "top secret ;)\n",
-      ">qual a sua cidade?\n",
-      "São Paulo, na Faria Lima\n",
-      ">qual o preço do dolar?\n",
-      "None\n",
-      ">qual o preço do dolar ?\n",
-      "None\n",
-      ">preço dolar ?\n",
-      "Não sei dizer, mas vou pesquisar!\n",
-      ">preço dolar ?\n",
-      "Alto demais!\n"
+      "Por favor escreva em minusculo. Escreva quit para sair \n"
      ]
     }
    ],
